完善测试。优化代码格式